# DecentraLearn

./: Cargo.toml  README.md  asdsds  dfx.json  filename.json  package-lock.json  package.json  processed.txt  test_backend.sh  webpack.config.js
src/DecentraLearn_backend/: Cargo.toml  DecentraLearn_backend.did  vectors.csv  viz.py
src/DecentraLearn_backend/src/: lib.did  lib.rs
src/DecentraLearn_backend/src/controllers/: canister.rs  chapter.rs  chat.rs  course.rs  enrollment.rs  lesson.rs  mod.rs  module.rs  pdf_test.rs  progress.rs
src/DecentraLearn_backend/src/models/: chapter.rs  chat.rs  course.rs  dump.txt  enrollment.rs  lesson.rs  mod.rs  module.rs  rag.rs  rag_localization.rs
src/DecentraLearn_backend/src/services/: llm-service.rs  llm.rs
src/DecentraLearn_frontend/: index.html  package-lock.json  package.json  vite.config.js
src/DecentraLearn_frontend/public/: .ic-assets.json5
src/DecentraLearn_frontend/src/: App.jsx  App.tsx  index.css  main.jsx
src/DecentraLearn_frontend/src/components/: AdminSidebar.tsx  Chatbot.tsx  CourseCard.tsx  CourseForm.tsx  CourseProgress.tsx  EnrollButton.tsx  EnrollmentChart.tsx  Header.tsx  Hero.tsx  LessonCompleteButton.tsx  Loader.tsx  ModuleForm.tsx  Particles.tsx  SearchInput.tsx  Sidebar.tsx  SidebarProvider.tsx
src/DecentraLearn_frontend/src/lib/: backend.ts
src/DecentraLearn_frontend/src/pages/: Admin.tsx  AdminCourses.tsx  AdminLayout.tsx  AdminModules.tsx  AdminUsers.tsx  CourseLayout.tsx  CoursePage.tsx  Dashboard.tsx  Explore.tsx  Home.tsx  LearnLayout.tsx  LessonPage.tsx  MyCoursesPage.tsx  NewCourse.tsx  NotFound.tsx  SearchPage.tsx
src/declarations/DecentraLearn_backend/: DecentraLearn_backend.did.d.ts  DecentraLearn_backend.did.js  index.d.ts  index.js
src/declarations/DecentraLearn_frontend/: index.d.ts  index.js
src/imgTank/: main.mo
src/imgTank_assets/assets/: sample-asset.txt
src/imgTank_assets/src/: index.html  index.js
src/motoko/ext/: HttpTypes.mo
(+7 files in other folders)
