[package]
name = "DecentraLearn_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.8"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-llm = "0.1"
tokio = { version = "1", features = ["full"] }
mio = "0.8"
#
#
# [patch.crates-io]
# mio = { version = "0.8.11", default-features = false }
#

