[package]
name = "DecentraLearn_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-llm = "0.3.0"
ic-cdk-timers = "0.10"
ic-cdk-macros = "0.8"  
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"


