[package]
name = "DecentraLearn_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.8"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10.13"
anyhow = "1.0.75"
ndarray = "0.15.6"
rayon = "1.7.0"
uuid = { version = "1.4", features = ["v4"] }
itertools = "0.14.0"
tokenizers = "0.21.1"
lopdf = "0.36.0"
faiss = "0.12.1"
gemini-rs = "1.1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.11.1"
pdf-extract = "0.8.2"
pdfium-render = "0.8.29"
image = "0.25.6"
libpdf = "0.3.0"
